--- a/ProcGenDungeon/.vscode/settings.json
+++ b/ProcGenDungeon/.vscode/settings.json
@@ -56,5 +56,6 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "ProcGenDungeon.sln"
+    "dotnet.defaultSolution": "ProcGenDungeon.sln",
+    "FSharp.suggestGitignore": false
 }
